src/test/deca/context/invalid/inst_return_in_void_method_if.deca
// Test of the rule (3.24): not possible to return something
// when we are not expecting a return in if

class A  {

    void voidMethod(){
        if (true){
            return 1;
        }
        
    }
}



// Resultat:

//# TODO message error
